--- a/src/components/NavigationMenu/styles.module.scss
+++ b/src/components/NavigationMenu/styles.module.scss
@@ -1,4 +1,52 @@
+@import "@/ui/constants/styles/globalColors.module.scss";
+@import "@/ui/constants/styles/globalSizes.module.scss";
+@import "@/ui/constants/styles/globalVariables.module.scss";
+
 .main-menu {
   min-width: 220px;
   max-width: 220px;
+  height: 100%;
+  background-color: $MENU_BACKGROUND;
+}
+
+.mobile-menu {
+  display: none;
+}
+
+.close-menu {
+  display: none;
+}
+
+@media (max-width: $mediumDevices) {
+  .main-menu {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: $TOP_LEVEL_INDEX;
+    &.active {
+      display: block;
+    }
+  }
+
+  .close-menu {
+    display: block;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+  }
+
+  .mobile-menu {
+    background-color: $MENU_BACKGROUND;
+    z-index: $SELECT_LEVEL_INDEX;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    align-items: center;
+    &.active {
+      display: flex;
+    }
+  }
 }
