Layout: add simple logo

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -37,3 +37,9 @@ input {
     line-height: $MAIN_FONT_SIZE;
   }
 }
+
+@media (max-width: $mediumDevices) {
+  .main-content {
+    padding-top: 50px;
+  }
+}
