Main: add gap to global styles

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -12,6 +12,7 @@ html {
 body {
   overflow: hidden;
 }
+
 /* custom scrollbar */
 ::-webkit-scrollbar {
   width: 20px;
@@ -30,6 +31,126 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--colorScrollbarHover);
+}
+
+.gap-same {
+  gap: unset;
+}
+
+.gap-same-level {
+  gap: var(--spacingItems);
+}
+
+.gap-other-level {
+  gap: var(--spacingItemsOtherGroup);
+}
+
+.gap-other-level-large {
+  gap: var(--spacingItemsOtherLayer);
+}
+
+.gap-close {
+  gap: var(--spacingItemsClose);
+}
+
+.gap-almost-same {
+  gap: var(--spacingItemsAlmostSame);
+}
+
+.bottom-gap-same {
+  margin-bottom: unset;
+}
+
+.bottom-gap-same-level {
+  margin-bottom: var(--spacingItems);
+}
+
+.bottom-gap-other-level {
+  margin-bottom: var(--spacingItemsOtherGroup);
+}
+
+.bottom-gap-other-level-large {
+  margin-bottom: var(--spacingItemsOtherLayer);
+}
+
+.bottom-gap-close {
+  margin-bottom: var(--spacingItemsClose);
+}
+
+.bottom-gap-almost-same {
+  margin-bottom: var(--spacingItemsAlmostSame);
+}
+
+.top-gap-same {
+  margin-top: unset;
+}
+
+.top-gap-same-level {
+  margin-top: var(--spacingItems);
+}
+
+.top-gap-other-level {
+  margin-top: var(--spacingItemsOtherGroup);
+}
+
+.top-gap-other-level-large {
+  margin-top: var(--spacingItemsOtherLayer);
+}
+
+.top-gap-close {
+  margin-top: var(--spacingItemsClose);
+}
+
+.top-gap-almost-same {
+  margin-top: var(--spacingItemsAlmostSame);
+}
+
+.right-gap-same {
+  margin-right: unset;
+}
+
+.right-gap-same-level {
+  margin-right: var(--spacingItems);
+}
+
+.right-gap-other-level {
+  margin-right: var(--spacingItemsOtherGroup);
+}
+
+.right-gap-other-level-large {
+  margin-right: var(--spacingItemsOtherLayer);
+}
+
+.right-gap-close {
+  margin-right: var(--spacingItemsClose);
+}
+
+.right-gap-almost-same {
+  margin-right: var(--spacingItemsAlmostSame);
+}
+
+.left-gap-same {
+  margin-left: unset;
+}
+
+.left-gap-same-level {
+  margin-left: var(--spacingItems);
+}
+
+.left-gap-other-level {
+  margin-left: var(--spacingItemsOtherGroup);
+}
+
+.left-gap-other-level-large {
+  margin-left: var(--spacingItemsOtherLayer);
+}
+
+.left-gap-close {
+  margin-left: var(--spacingItemsClose);
+}
+
+.left-gap-almost-same {
+  margin-left: var(--spacingItemsAlmostSame);
 }
 
 @media (max-width: $mediumDevices) {
