--- a/src/components/Containers/SnackbarContainer/styles.module.scss
+++ b/src/components/Containers/SnackbarContainer/styles.module.scss
@@ -2,8 +2,8 @@
 
 .snackbar-container {
   position: absolute;
-  bottom: var(--spacingItemsOnSameLevel);
-  right: var(--spacingItemsOnSameLevel);
+  bottom: var(--spacingItems);
+  right: var(--spacingItems);
   min-width: $snackbarContainerWidth;
   max-width: $snackbarContainerWidth;
 }
