--- a/src/components/Logo/styles.module.scss
+++ b/src/components/Logo/styles.module.scss
@@ -1,6 +1,6 @@
 .logo-container {
   align-items: center;
-  gap: var(--spacingItemsOnSameLevel);
+  gap: var(--spacingItems);
   h5 {
     width: fit-content;
     text-transform: uppercase;
