Styles: change styles settings for button component

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -44,32 +44,37 @@
   --color-primary-hover: #d95733;
   --color-primary-pressed: #b94d2a;
   --color-primary-text: #f4e3e3;
-  --color-primary-transparent: #f4e3e317;
   --color-primary-icon: #f4e3e3;
+  --color-primary-transparent-icon: #f2f2f2;
+  --color-primary-transparent: #f4e3e317;
 
   --color-secondary-main: #bb204e;
   --color-secondary-hover: #b21745;
   --color-secondary-pressed: #9e0f3b;
   --color-secondary-text: #f4e3e3;
   --color-secondary-icon: #f4e3e3;
+  --color-secondary-transparent-icon: #f2f2f2;
 
   --color-success-main: #656d4a;
   --color-success-hover: #7b8a5f;
   --color-success-pressed: #4d5639;
   --color-success-text: #2e3222;
-  --color-success-icon: #f4e3e3;
+  --color-success-icon: #2e3222;
+  --color-success-transparent-icon: #f2f2f2;
 
   --color-cancel-main: #b6ad90;
   --color-cancel-hover: #c1b8a0;
   --color-cancel-pressed: #a49b7e;
   --color-cancel-text: #615c4c;
-  --color-cancel-icon: #f4e3e3;
+  --color-cancel-icon: #615c4c;
+  --color-cancel-transparent-icon: #f2f2f2;
 
   --color-remove-main: #d04a47;
   --color-remove-hover: #e05a57;
   --color-remove-pressed: #b63a37;
   --color-remove-text: #3c0e0d;
-  --color-remove-icon: #f4e3e3;
+  --color-remove-icon: #3c0e0d;
+  --color-remove-transparent-icon: #f2f2f2;
 
   --color-block-100: #6b4345;
   --color-block-200: #5b353a;
@@ -103,8 +108,6 @@
   --z-index-modal: 1050;
   --z-index-snackbar: 1100;
   --z-index-top: 2000;
-
-  --radius-button: 5rem;
 
   /* Region basic spacing rule */
   /* padding steps */
@@ -160,6 +163,14 @@
   --padding-action-small: var(--padding-step-tiny) var(--padding-step-sm);
   --padding-form-element: var(--padding-step-xs) var(--padding-step-2xs);
   /* Endregion basic spacing rule */
+
+  /* Region ui-settings */
+  --padding-button: var(--padding-step-xs) var(--padding-step-sm);
+  --padding-button-small: var(--padding-step-tiny) var(--padding-step-sm);
+  --height-button: calc(2 * var(--padding-step-xs) + 1.5rem);
+  --height-button-small: calc(2 * var(--padding-step-tiny) + 1.5rem);
+  --radius-button: 1rem;
+  /* Endregion ui-settings */
 }
 
 /*
