Main: update css and packages for ui submodule

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -3,18 +3,6 @@
 @theme {
   --font-icon: Material Symbols Rounded;
 
-  --width-gap-1\/12: calc(100% * 1 / 12 - (12 - 1) * (1.25rem / 12));
-  --width-gap-2\/12: calc(100% * 2 / 12 - (12 - 2) * (1.25rem / 12));
-  --width-gap-3\/12: calc(100% * 3 / 12 - (12 - 3) * (1.25rem / 12));
-  --width-gap-4\/12: calc(100% * 4 / 12 - (12 - 4) * (1.25rem / 12));
-  --width-gap-5\/12: calc(100% * 5 / 12 - (12 - 5) * (1.25rem / 12));
-  --width-gap-6\/12: calc(100% * 6 / 12 - (12 - 6) * (1.25rem / 12));
-  --width-gap-7\/12: calc(100% * 7 / 12 - (12 - 7) * (1.25rem / 12));
-  --width-gap-8\/12: calc(100% * 8 / 12 - (12 - 8) * (1.25rem / 12));
-  --width-gap-9\/12: calc(100% * 9 / 12 - (12 - 9) * (1.25rem / 12));
-  --width-gap-10\/12: calc(100% * 10 / 12 - (12 - 10) * (1.25rem / 12));
-  --width-gap-11\/12: calc(100% * 11 / 12 - (12 - 11) * (1.25rem / 12));
-
   --gap-almost-same: 0.25rem;
   --gap-other-level: 2rem;
   --gap-other-level-large: 3.75rem;
@@ -26,17 +14,50 @@
   --margin-other-level: 2rem;
   --margin-other-level-large: 3.75rem;
   --margin-same: unset;
-  --margin-gap-1\/12: calc(100% * 1 / 12 - (12 - 1) * (1.25rem / 12));
-  --margin-gap-2\/12: calc(100% * 2 / 12 - (12 - 2) * (1.25rem / 12));
-  --margin-gap-3\/12: calc(100% * 3 / 12 - (12 - 3) * (1.25rem / 12));
-  --margin-gap-4\/12: calc(100% * 4 / 12 - (12 - 4) * (1.25rem / 12));
-  --margin-gap-5\/12: calc(100% * 5 / 12 - (12 - 5) * (1.25rem / 12));
-  --margin-gap-6\/12: calc(100% * 6 / 12 - (12 - 6) * (1.25rem / 12));
-  --margin-gap-7\/12: calc(100% * 7 / 12 - (12 - 7) * (1.25rem / 12));
-  --margin-gap-8\/12: calc(100% * 8 / 12 - (12 - 8) * (1.25rem / 12));
-  --margin-gap-9\/12: calc(100% * 9 / 12 - (12 - 9) * (1.25rem / 12));
-  --margin-gap-10\/12: calc(100% * 10 / 12 - (12 - 10) * (1.25rem / 12));
-  --margin-gap-11\/12: calc(100% * 11 / 12 - (12 - 11) * (1.25rem / 12));
+  --margin-gap-1\/12: calc(
+    100% * 1 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 1) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
+  --margin-gap-2\/12: calc(
+    100% * 2 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 2) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
+  --margin-gap-3\/12: calc(
+    100% * 3 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 3) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
+  --margin-gap-4\/12: calc(
+    100% * 4 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 4) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
+  --margin-gap-5\/12: calc(
+    100% * 5 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 5) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
+  --margin-gap-6\/12: calc(
+    100% * 6 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 6) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
+  --margin-gap-7\/12: calc(
+    100% * 7 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 7) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
+  --margin-gap-8\/12: calc(
+    100% * 8 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 8) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
+  --margin-gap-9\/12: calc(
+    100% * 9 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 9) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
+  --margin-gap-10\/12: calc(
+    100% * 10 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 10) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
+  --margin-gap-11\/12: calc(
+    100% * 11 / var(--grid-cols, 12) - (var(--grid-cols, 12) - 11) *
+      (var(--grid-gap, 1.25rem) / 12)
+  );
 
   --color-page: #512a2f;
 
@@ -169,7 +190,14 @@
   --padding-button-small: var(--padding-step-tiny) var(--padding-step-sm);
   --height-button: calc(2 * var(--padding-step-xs) + 1.5rem);
   --height-button-small: calc(2 * var(--padding-step-tiny) + 1.5rem);
+  --height-form-element: 3rem;
+  --height-input-fieldset: calc(var(--height-form-element) + 0.75rem);
+  --height-form-small-element: 1.25rem;
+  --width-form-small-element: 1.25rem;
+  --height-form-element-sign: 0.75rem;
+  --width-form-element-sign: 0.75rem;
   --radius-button: 1rem;
+  --radius-form-element: 0.375rem;
   /* Endregion ui-settings */
 }
 
@@ -223,4 +251,107 @@ a {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #c5c5c5;
+}
+
+@layer utilities {
+  .col-span {
+    /* базовый расчёт (fallback значения внутри var()) */
+    width: calc(
+      100% * var(--grid-span, 1) / var(--grid-cols, 12) -
+        (var(--grid-cols, 12) - var(--grid-span, 1)) *
+        (var(--grid-gap, 1.25rem) / var(--grid-cols, 12))
+    );
+    margin-left: calc(
+      100% * var(--grid-offset, 0) / var(--grid-cols, 12) +
+        var(--grid-gap, 1.25rem) * var(--grid-offset, 0) / var(--grid-cols, 12)
+    );
+  }
+
+  @media (width < 40rem) {
+    .col-span {
+      width: calc(
+        100% * var(--grid-span-sm, var(--grid-span, 1)) / var(--grid-cols, 12) -
+          (var(--grid-cols, 12) - var(--grid-span-sm, var(--grid-span, 1))) *
+          (var(--grid-gap, 1.25rem) / var(--grid-cols, 12))
+      );
+      margin-left: calc(
+        100% * var(--grid-offset-sm, var(--grid-offset, 0)) /
+          var(--grid-cols, 12) + var(--grid-gap, 1.25rem) *
+          var(--grid-offset-sm, var(--grid-offset, 0)) / var(--grid-cols, 12)
+      );
+    }
+  }
+
+  /* sm (width >= 40rem = 640px) */
+  @media (width >= 40rem) {
+    .col-span {
+      width: calc(
+        100% * var(--grid-span-sm, var(--grid-span, 1)) / var(--grid-cols, 12) -
+          (var(--grid-cols, 12) - var(--grid-span-sm, var(--grid-span, 1))) *
+          (var(--grid-gap, 1.25rem) / var(--grid-cols, 12))
+      );
+      margin-left: calc(
+        100% * var(--grid-offset-sm, var(--grid-offset, 0)) /
+          var(--grid-cols, 12) + var(--grid-gap, 1.25rem) *
+          var(--grid-offset-sm, var(--grid-offset, 0)) / var(--grid-cols, 12)
+      );
+    }
+  }
+
+  /* md (width >= 48rem = 768px) */
+  @media (width >= 48rem) {
+    .col-span {
+      width: calc(
+        100% * var(--grid-span-md, var(--grid-span-sm, var(--grid-span, 1))) /
+          var(--grid-cols, 12) -
+          (
+            var(--grid-cols, 12) -
+              var(--grid-span-md, var(--grid-span-sm, var(--grid-span, 1)))
+          ) * (var(--grid-gap, 1.25rem) / var(--grid-cols, 12))
+      );
+      margin-left: calc(
+        100% * var(--grid-offset-md, var(--grid-offset, 0)) /
+          var(--grid-cols, 12) + var(--grid-gap, 1.25rem) *
+          var(--grid-offset-md, var(--grid-offset, 0)) / var(--grid-cols, 12)
+      );
+    }
+  }
+
+  /* lg (width >= 64rem = 1024px) */
+  @media (width >= 64rem) {
+    .col-span {
+      width: calc(
+        100% * var(--grid-span-lg, var(--grid-span-md, var(--grid-span, 1))) /
+          var(--grid-cols, 12) -
+          (
+            var(--grid-cols, 12) -
+              var(--grid-span-lg, var(--grid-span-md, var(--grid-span, 1)))
+          ) * (var(--grid-gap, 1.25rem) / var(--grid-cols, 12))
+      );
+      margin-left: calc(
+        100% * var(--grid-offset-lg, var(--grid-offset, 0)) /
+          var(--grid-cols, 12) + var(--grid-gap, 1.25rem) *
+          var(--grid-offset-lg, var(--grid-offset, 0)) / var(--grid-cols, 12)
+      );
+    }
+  }
+
+  /* xl (width >= 80rem = 1280px) */
+  @media (width >= 80rem) {
+    .col-span {
+      width: calc(
+        100% * var(--grid-span-xl, var(--grid-span-lg, var(--grid-span, 1))) /
+          var(--grid-cols, 12) -
+          (
+            var(--grid-cols, 12) -
+              var(--grid-span-xl, var(--grid-span-lg, var(--grid-span, 1)))
+          ) * (var(--grid-gap, 1.25rem) / var(--grid-cols, 12))
+      );
+      margin-left: calc(
+        100% * var(--grid-offset-xl, var(--grid-offset, 0)) /
+          var(--grid-cols, 12) + var(--grid-gap, 1.25rem) *
+          var(--grid-offset-xl, var(--grid-offset, 0)) / var(--grid-cols, 12)
+      );
+    }
+  }
 }
